--- a/product-service/package.json
+++ b/product-service/package.json
@@ -23,6 +23,8 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^25.1.0",
     "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
     "prisma": "^7.3.0",
