--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,8 +7,11 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "ts-node-dev src/index.ts",
+  "lint": "eslint . --ext .ts",
+  "test": "jest"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
